# GEGL-OpenCL

./: .cvsignore  .gitignore  AUTHORS  CNAME  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in  gegl-config.in  gegl-uninstalled.pc.in  gegl.doap  gegl.m4  gegl.pc.in  gegl.spec.in  patch_for_gob-0.92.1
bindings/gegl-sharp/: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  gegl-sharp-1.0.pc.in  gegl-sharp-2.0.pc.in
bindings/pygegl/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  gegl.defs  gegl.override  geglmodule.c  generate_api_bindings.sh  teste.sh
bindings/vala/: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  babl-0.0.vapi  configure.ac  gegl-0.0.deps  gegl-0.0.vapi
codegen/: ChangeLog  FLOAT  Makefile.am  README  UINT16  UINT8  common.h  configure  data_type.h  file  lexer.l  parser.y
codegen/channel_data/: float  u16  u16_4k  u8
codegen/pixel_data/: gegl_pixel
codegen/src/: Makefile.am  lexer.l  parser.y
codegen/test_files/: gegl-add-op.gil  gegl-composite-op.gil  gegl-composite-premult-op.gil  gegl-const-mult.gil  gegl-dark-op.gil  gegl-diff-op.gil  gegl-fill-op.gil  gegl-light-op.gil  gegl-light.gil  gegl-max-op.gil  gegl-min-op.gil  gegl-min.gil  gegl-mult-op.gil  gegl-premult-op.gil  gegl-print-op.gil  gegl-screen-op.gil  gegl-screen.gil  gegl-subtract-op.gil  gegl-subtract.gil  gegl-unpremult-op.gil  init_test  test  test10  test11  test13  test2  test3  test4  test5  test6  test7  test8  test9
docs/: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS.txt  TODO.xml  abyss_policy.txt  bugzilla.txt  build.txt  codegen.html  commandline.txt  contribute.html  contribute.txt  copyright.txt  copyright.txt.in  development.txt  devhelp.css  editor.txt  environment.txt  features.txt  gegl-chain.txt  gegl-color-convert-op.html  gegl-color-model.html  gegl.css  gegl.html  geglClasses.html  geglImageAndOp.html  geglTasks.html  genericChannelData.html  genericImageLanguage.html  gimp16.html  gimp16_install_notes.html  gimp_siggraph.html  glossary.txt  gradient.ps  hello-world-video.c  hello-world.c  hello-world.txt  hello-world.txt.in  index-static.html.in  (+10 more)
docs/dia/: apply.dia  collectinputs.dia  composite.dia  graph.dia  inputs_outputs_for_color_op.dia  inputs_outputs_for_fade_op.dia  inputs_outputs_for_over_op.dia  node_no_input_upstream.dia  ops.dia  sharednode.dia  simplegraph.dia
docs/gallery/: .cvsignore  .gitignore  Makefile.am  OpenRaster-00.xml  OpenRaster-01.xml  OpenRaster-02.xml  OpenRaster-03.xml  OpenRaster-04.xml  OpenRaster-05.xml  clones.xml  drop-shadow.xml  unsharp-mask.xml
docs/gegl-sharp/: index.html
docs/gegl-vala/: index.html
docs/images/: .gitignore
docs/pr_docs/: appendix.tex  conclution.tex  cooperation.tex  current_state_gegl.tex  future_gegl.tex  gimp.aux  gimp.dvi  gimp.lof  gimp.ps  gimp.tex  gimp.toc  gimp1.2.tex  gimp2.tex  gimp_film.tex  gimp_future.tex  gimp_license.tex  higher_level_design_gegl.tex  (+17 more)
examples/: .gitignore  2gegl.c  2geglbuffer.c  Makefile.am  csugar.c  float-lookup.c  frame-counter.c  gegl-convert.c  gegl-paint.c  gegl-slicer.c  gegl-video.c  geglbuffer-add-image.c  geglbuffer-clock.c  gi-test.py  hello-world-video.c  hello-world.c  introspection.py  lgi.lua  multiplayer-paint.sh  sdl-draw.c  simple-graph.py  video-invert.c  xml-graph.py
gegl/: .cvsignore  .gitignore  Gegl-0.1.metadata  Gegl.metadata.in  Makefile.am  gegl-add-impl.gil  gegl-add-impl.h  gegl-add-op.gil  gegl-add-op.gob  gegl-add.c  gegl-add.gil  gegl-add.h  gegl-algorithms-2x2-downscale.inc  gegl-algorithms-bilinear.inc  gegl-algorithms-boxfilter.inc  gegl-algorithms.c  gegl-algorithms.h  gegl-apply.c  gegl-apply.h  gegl-array-param-specs.c  gegl-array-param-specs.h  gegl-array-value-types.c  gegl-array-value-types.h  gegl-atop.c  gegl-atop.h  gegl-attributes.c  gegl-attributes.h  gegl-bfs-visitor.c  gegl-bfs-visitor.h  gegl-binary.c  gegl-binary.h  gegl-blend.c  gegl-blend.h  gegl-buffer.c  gegl-buffer.h  gegl-c.c  gegl-c.h  gegl-cache.gob  gegl-chancopy-op.gob  gegl-channel-data.c  (+468 more)
gil/: Makefile.am  README  gilast.h  gilinterpret.h  gilsymbol.c  gilsymbol.h  gilsymboltable.h  giltype.c  giltype.h  lexer.l  parse.y
operations/: .gitignore  Makefile-common.am  Makefile-operations.am  Makefile.am
perf/: .gitignore  Makefile  Makefile-retrospect  Makefile-tests  Makefile.am  README  create-report.rb  joblist  perf-build.sh  test-bcontrast-4x.c  test-bcontrast-megachunk.c  test-bcontrast-minichunk.c  test-bcontrast.c  test-blur.c  test-common.h  test-gegl-buffer-access.c  test-init.c  test-passthrough.c  test-rotate.c  test-samplers.c  test-saturation.c  test-scale.c  test-translate.c  test-unsharpmask.c
seamless-clone/: .gitignore  Makefile.am  gegl-sc.pc.in  sc-common.h  sc-context.c  sc-context.h  sc-sample.c  sc-sample.h
tests/: .cvsignore  .gitignore  Makefile.am  addimpltest.c  addtest-float.c  addtest-rgb-float.c  addtest-rgb-uint8.c  addtest-uint8.c  addtest.c  bfspadvisitortest.c  bfspadvisitortest.c~  bfspropertyvisitortest.c  bfsvisitormultouttest.c  bfsvisitortest.c  buffertest.c  channelfloatvaluetest.c  channelspacetest.c  channelstest-float.c  channeluint8valuetest.c  channelvaluetest.c  checkoptest.c  checktest.c  colormodelrgbfloattest.c  colormodelrgbtest.c  colormodeltest.c  colorspacetest.c  colortest-float.c  colortest-rgb-float.c  colortest-rgb-uint8.c  colortest-uint8.c  colortest.c  constmultimpltest.c  constmulttest.c  copytest-float.c  copytest-rgb-float.c  copytest-rgb-uint8.c  copytest-uint8.c  copytest.c  databuffertest.c  dataspacetest.c  (+185 more)
tools/: .cvsignore  .gitignore  Makefile.am  README  create-reference.rb  csourcetostring.py  detect_opencl.c  exp_combine.cpp  gegl-imgcmp.c  gegl-tester.c  gen-loader.sh  gobj2dot.rb  img_cmp.c  introspect.c  lexer.l  make-init-types.sh  operation_reference.c  operations_html.c  xml_insert.sh
(+1803 files in other folders)
